// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CopyButton renders correctly 1`] = `
<DocumentFragment>
  .cache-yb56yg-StyledChildrenContainer {
  display: inherit;
}

.cache-1nzb78i-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #521094;
  color: #521094;
}

.cache-1nzb78i-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1nzb78i-StyledOutlinedButton:active {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-1nzb78i-StyledOutlinedButton:hover,
.cache-1nzb78i-StyledOutlinedButton:active {
  background: #e5dbfd;
  color: #3b1a61;
  border: 1px solid #3b1a61;
}

.cache-kbjega-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<div
    aria-describedby=":r0:"
    class="cache-yb56yg-StyledChildrenContainer e1h4zly10"
    tabindex="0"
  >
    <button
      aria-label="Copy"
      class="cache-1nzb78i-StyledOutlinedButton e112qvla1"
      type="button"
    >
      <svg
        class="cache-kbjega-StyledIcon-sizeStyles e5nqbfp0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`CopyButton renders correctly sentiment large 1`] = `
<DocumentFragment>
  .cache-yb56yg-StyledChildrenContainer {
  display: inherit;
}

.cache-vohia9-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #521094;
  color: #521094;
}

.cache-vohia9-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-vohia9-StyledOutlinedButton:active {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-vohia9-StyledOutlinedButton:hover,
.cache-vohia9-StyledOutlinedButton:active {
  background: #e5dbfd;
  color: #3b1a61;
  border: 1px solid #3b1a61;
}

.cache-kbjega-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<div
    aria-describedby=":r2:"
    class="cache-yb56yg-StyledChildrenContainer e1h4zly10"
    tabindex="0"
  >
    <button
      aria-label="Copy"
      class="cache-vohia9-StyledOutlinedButton e112qvla1"
      type="button"
    >
      <svg
        class="cache-kbjega-StyledIcon-sizeStyles e5nqbfp0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`CopyButton renders correctly sentiment neutral 1`] = `
<DocumentFragment>
  .cache-yb56yg-StyledChildrenContainer {
  display: inherit;
}

.cache-8tymko-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #b5b7bd;
  color: #3f4250;
}

.cache-8tymko-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-8tymko-StyledOutlinedButton:active {
  box-shadow: 0px 0px 0px 3px #151A2D5C;
}

.cache-8tymko-StyledOutlinedButton:hover,
.cache-8tymko-StyledOutlinedButton:active {
  background: #e9eaeb;
  color: #222638;
  border: 1px solid #92959d;
}

.cache-kbjega-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<div
    aria-describedby=":r4:"
    class="cache-yb56yg-StyledChildrenContainer e1h4zly10"
    tabindex="0"
  >
    <button
      aria-label="Copy"
      class="cache-8tymko-StyledOutlinedButton e112qvla1"
      type="button"
    >
      <svg
        class="cache-kbjega-StyledIcon-sizeStyles e5nqbfp0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`CopyButton renders correctly sentiment primary 1`] = `
<DocumentFragment>
  .cache-yb56yg-StyledChildrenContainer {
  display: inherit;
}

.cache-1nzb78i-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #521094;
  color: #521094;
}

.cache-1nzb78i-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1nzb78i-StyledOutlinedButton:active {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-1nzb78i-StyledOutlinedButton:hover,
.cache-1nzb78i-StyledOutlinedButton:active {
  background: #e5dbfd;
  color: #3b1a61;
  border: 1px solid #3b1a61;
}

.cache-kbjega-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<div
    aria-describedby=":r3:"
    class="cache-yb56yg-StyledChildrenContainer e1h4zly10"
    tabindex="0"
  >
    <button
      aria-label="Copy"
      class="cache-1nzb78i-StyledOutlinedButton e112qvla1"
      type="button"
    >
      <svg
        class="cache-kbjega-StyledIcon-sizeStyles e5nqbfp0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`CopyButton renders correctly sentiment small 1`] = `
<DocumentFragment>
  .cache-yb56yg-StyledChildrenContainer {
  display: inherit;
}

.cache-1nzb78i-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #521094;
  color: #521094;
}

.cache-1nzb78i-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1nzb78i-StyledOutlinedButton:active {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-1nzb78i-StyledOutlinedButton:hover,
.cache-1nzb78i-StyledOutlinedButton:active {
  background: #e5dbfd;
  color: #3b1a61;
  border: 1px solid #3b1a61;
}

.cache-kbjega-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<div
    aria-describedby=":r1:"
    class="cache-yb56yg-StyledChildrenContainer e1h4zly10"
    tabindex="0"
  >
    <button
      aria-label="Copy"
      class="cache-1nzb78i-StyledOutlinedButton e112qvla1"
      type="button"
    >
      <svg
        class="cache-kbjega-StyledIcon-sizeStyles e5nqbfp0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`CopyButton renders correctly with custom class name 1`] = `
<DocumentFragment>
  .cache-yb56yg-StyledChildrenContainer {
  display: inherit;
}

.cache-1nzb78i-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #521094;
  color: #521094;
}

.cache-1nzb78i-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1nzb78i-StyledOutlinedButton:active {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-1nzb78i-StyledOutlinedButton:hover,
.cache-1nzb78i-StyledOutlinedButton:active {
  background: #e5dbfd;
  color: #3b1a61;
  border: 1px solid #3b1a61;
}

.cache-kbjega-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<div
    aria-describedby=":r8:"
    class="cache-yb56yg-StyledChildrenContainer e1h4zly10"
    tabindex="0"
  >
    <button
      aria-label="Copy"
      class="custom-class cache-1nzb78i-StyledOutlinedButton e112qvla1"
      type="button"
    >
      <svg
        class="cache-kbjega-StyledIcon-sizeStyles e5nqbfp0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`CopyButton renders correctly with custom copied text 1`] = `
<DocumentFragment>
  .cache-yb56yg-StyledChildrenContainer {
  display: inherit;
}

.cache-1nzb78i-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #521094;
  color: #521094;
}

.cache-1nzb78i-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1nzb78i-StyledOutlinedButton:active {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-1nzb78i-StyledOutlinedButton:hover,
.cache-1nzb78i-StyledOutlinedButton:active {
  background: #e5dbfd;
  color: #3b1a61;
  border: 1px solid #3b1a61;
}

.cache-kbjega-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<div
    aria-describedby=":r7:"
    class="cache-yb56yg-StyledChildrenContainer e1h4zly10"
    tabindex="0"
  >
    <button
      aria-label="Copy"
      class="cache-1nzb78i-StyledOutlinedButton e112qvla1"
      type="button"
    >
      <svg
        class="cache-kbjega-StyledIcon-sizeStyles e5nqbfp0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`CopyButton renders correctly with custom copy text 1`] = `
<DocumentFragment>
  .cache-yb56yg-StyledChildrenContainer {
  display: inherit;
}

.cache-1nzb78i-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #521094;
  color: #521094;
}

.cache-1nzb78i-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1nzb78i-StyledOutlinedButton:active {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-1nzb78i-StyledOutlinedButton:hover,
.cache-1nzb78i-StyledOutlinedButton:active {
  background: #e5dbfd;
  color: #3b1a61;
  border: 1px solid #3b1a61;
}

.cache-kbjega-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<div
    aria-describedby=":r6:"
    class="cache-yb56yg-StyledChildrenContainer e1h4zly10"
    tabindex="0"
  >
    <button
      aria-label="Copy"
      class="cache-1nzb78i-StyledOutlinedButton e112qvla1"
      type="button"
    >
      <svg
        class="cache-kbjega-StyledIcon-sizeStyles e5nqbfp0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`CopyButton renders correctly with no border 1`] = `
<DocumentFragment>
  .cache-yb56yg-StyledChildrenContainer {
  display: inherit;
}

.cache-u0f27u-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #521094;
}

.cache-u0f27u-StyledGhostButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-u0f27u-StyledGhostButton:active {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-u0f27u-StyledGhostButton:hover,
.cache-u0f27u-StyledGhostButton:active {
  background: #e5dbfd;
  color: #3b1a61;
}

.cache-kbjega-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<div
    aria-describedby=":r5:"
    class="cache-yb56yg-StyledChildrenContainer e1h4zly10"
    tabindex="0"
  >
    <button
      aria-label="Copy"
      class="cache-u0f27u-StyledGhostButton e112qvla0"
      type="button"
    >
      <svg
        class="cache-kbjega-StyledIcon-sizeStyles e5nqbfp0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;
